Adding FPGA Wrapper of MIPS

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
 **/proj_modelsim/work
 **/proj_modelsim/vsim.wlf
-**/db/
-**/incremental_db/
+**/proj_quartus/db
+**/proj_quartus/incremental_db
+**/proj_quartus/simulation
 *.bak
 *.wlk
 *.ini
-**/output_files/*.*
-**/output_files/!*.sof
+**/proj_quartus/output_files
 **/proj_quartus/greybox_tmp
+**/src/greynox_tmp
 *.mti
 *.mpf
 *.qws
