--- a/proj_quartus/Data_Path.qsf
+++ b/proj_quartus/Data_Path.qsf
@@ -274,4 +274,5 @@ set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -rise
 set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -fall
 set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -rise
 set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -fall
+set_global_assignment -name VERILOG_FILE ../src/Zero_Extend.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
